--- a/argo-model/apps/prometheus.yml
+++ b/argo-model/apps/prometheus.yml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kad
+  name: prometheus
   namespace: argo
 spec:
-  destination:
-    namespace: kad
-    server: https://kubernetes.default.svc
   project: default
+  destination:
+    name: in-cluster
+    namespace: prometheus
   source:
-    path: helm
-    repoURL: https://gitlab.com/6shore.net/kad.git
+    repoURL: https://gitlab.com/tomkukral/training-model.git
     targetRevision: HEAD
+    path: prometheus
   syncPolicy:
     syncOptions:
+    - Validate=true
     - CreateNamespace=true
-
