--- a/argo-model/apps/loki.yml
+++ b/argo-model/apps/loki.yml
@@ -9,9 +9,9 @@ spec:
     name: in-cluster
     namespace: loki
   source:
-    repoURL: https://gitlab.com/tomkukral/training-model.git
+    repoURL: https://github.com/amoravek/k8s-datascript.git
     targetRevision: HEAD
-    path: loki
+    path: argo-model/loki
   syncPolicy:
     syncOptions:
     - Validate=true
