--- a/mq/imagestream.yaml
+++ b/mq/imagestream.yaml
@@ -12,4 +12,4 @@ spec:
       name: harbor.trask.cz/tif/ibmcom-mq-tif:9.1.3.0
     name: 9.1.3.0
     referencePolicy:
-      type: Source
+      type: Local
