--- a/mq/statefulset.yaml
+++ b/mq/statefulset.yaml
@@ -22,7 +22,7 @@ spec:
             name: mq-secret
         - configMapRef:
             name: mq-config
-        image: ibmcom-mq-tif:9.1.3.0
+        image: harbor.trask.cz/tif/ibmcom-mq-tif:9.1.3.0
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
